# flip-every-country-twitter

./: Cargo.toml  countries.csv
src/: lib.rs  main.rs
