[package]
name = "fuck-every-country-twit"
version = "0.1.0"
edition = "2021"

[dependencies]
celes = "2.4.0"
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"
twitter-v2 = "0.1.8"

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true